# makemake90

./: .gitignore  LICENSE  README  README.md  README.txt  makemake.py  makemake90  makemake90.py  pyproject.toml  setup.cfg
doc/: conf.py  index.rst  module.rst
logo/: Makefile  logo.sh  logo.tex  optimize.py
