[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "makemake90"
version = "0.1"
authors = [{name = "Jan Berges"}]
description = "Generate Makefiles for modular Fortran programs"
readme = "README.md"
urls = {Homepage = "https://github.com/janberges/makemake90"}
classifiers = [
    "Programming Language :: Python",
    "License :: Freely Distributable",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=2.7"
scripts = {makemake90 = "makemake90:main"}
