[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "makemake90"
dynamic = ["version"]
authors = [{name = "Jan Berges"}]
description = "Generate Makefiles for modular Fortran programs"
readme = "README.md"
license = {file = "LICENSE"}
urls = {Homepage = "https://github.com/janberges/makemake90"}
classifiers = [
    "License :: OSI Approved :: Zero-Clause BSD (0BSD)",
    "Programming Language :: Python",
]
requires-python = ">=2.7"
scripts = {makemake90 = "makemake90:main"}
