[metadata]
name = makemake
version = 0.1
author = Jan Berges
author_email =
description = Generate Makefiles for modular Fortran programs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/janberges/makemake
classifiers =
    Programming Language :: Python
    License :: Freely Distributable
    Operating System :: POSIX :: Linux

[options]
python_requires = >=2.7
scripts =
    makemake.py
